# efficient-kan

./: .gitignore  pyproject.toml  requirements.txt
examples/: mnist.py
