[tool.poetry]
name = "efficient-kan"
version = "0.1.0"
description = ""
authors = ["Arnav Komaragiri <komaraac@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.3.0"
pytest = ">=8.2.0"
tqdm = ">=4.66.2"
torchvision = ">=0.18.0"
seaborn = "^0.13.2"
ray = {extras = ["tune"], version = "^2.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
